...


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_walk_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="@{viewModel.permissionDenied ? View.GONE : View.VISIBLE}"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/primaryDarkColor"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pre_walker_zone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.walkerStatus == WalkerStatus.PREPARE ? View.VISIBLE : View.GONE}">

                <TextView
                    android:id="@+id/pre_route_title"
...
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="@{viewModel.mapRoute == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toTopOf="@+id/button_load_route"
                    app:layout_constraintEnd_toEndOf="@+id/pre_walking_divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:mapRouteTime="@{ viewModel.mapRoute.routes[0] }" />

                <TextView
                    android:id="@+id/pre_walker_distance"
...
                    android:id="@+id/pre_walking_divider"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/primaryDarkColor"
                    app:layout_constraintBottom_toBottomOf="@+id/pre_button_start_stop"
                    app:layout_constraintEnd_toStartOf="@+id/pre_button_start_stop"
                    app:layout_constraintStart_toEndOf="@+id/button_load_route"
                    app:layout_constraintTop_toTopOf="@+id/pre_button_start_stop"

                    />

...
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pre_walking_divider"
                    tools:text="@string/start_walking" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/walker_zone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:visibility="@{viewModel.walkerStatus == WalkerStatus.PREPARE ? View.GONE : View.VISIBLE}">

                <View
                    android:id="@+id/walker_divider"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@id/button_start_stop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/walker_time_title"
...
