<resources>
    <string name="app_name">散步城市</string>
    <string name="title_activity_maps">Walkable</string>
    <string name="home_title">散步城市</string>
    <string name="ranking_title">排名</string>
    <string name="favorite_title">收藏</string>
    <string name="event_title">活動</string>
    <string name="profile_title">個人</string>
    <string name="load_route">載入路線</string>
    <string name="detail_title">詳細資訊</string>
    <string name="rating_title">評分</string>
    <string name="badge_title">散策徽章</string>
    <string name="best_walker_title">散步好朋友</string>
    <string name="setting_title">個人設定</string>
    <string name="explore_title">行跡地圖</string>
    <string name="add_friend_event_title">邀請好友</string>

    <string name="enter_walkable">進入散步城市</string>
    <string name="load_other_route">載入其他路線</string>
    <string name="route_loaded">已繪製路線資訊</string>

    <string name="map_drawing">地圖繪製中，請稍後</string>

    <string name="start_walking">開始散步</string>
    <string name="end_walking">結束散步</string>
    <string name="pause_walking">暫停散步</string>
    <string name="resume_walking">繼續散步</string>
    <string name="walker_walking">散步囉！</string>

    <string name="search_destination">搜尋目的地</string>

...
    <string name="approximate_time">約%.1f分</string>
    <string name="zero_time">00:00</string>
    <string name="zero_distance">0.000</string>
    <string name="approximate_length">約%.1f公里</string>
    <string name="recording_length">%.3f</string>

    <string name="finish_rating">完成評價</string>

    <string name="not_here">you are not suppose to be here</string>
    <string name="no_route_yet">目前無行跡路線</string>
    <string name="no_favs_route_yet">目前無收藏路線</string>
    <string name="no_route_nearby">附近無推薦路線</string>
    <string name="no_route_fit">無適合的推薦路線</string>
...
    <string name="filter_frequency">習慣培養</string>
    <string name="filter_distance_group">距離合作</string>
    <string name="filter_distance_race">距離競賽</string>
    <string name="filter_hour_group">時間累計</string>
    <string name="filter_hour_race">時間競賽</string>

    <string name="create_event">建立活動</string>
    <string name="create_event_title">活動名稱｜</string>
    <string name="create_title_hint">不超過六個字歐</string>
    <string name="create_event_type">活動類型｜</string>

    <string name="select_event_type">請選擇活動類型</string>
    <string name="select_fr_type">頻率</string>
...
    <string name="invite_you">邀請您加入此活動</string>
    <string name="maybe_later">稍後再說</string>
    <string name="join_now">加入</string>

    <string name="will_you_create_route">想為此次的散步創建一個分享路線嗎?</string>
    <string name="will_create">好歐</string>
    <string name="will_not_create">不用了</string>

    <string name="recording">紀錄中</string>

    <string name="accomplishment">完成度</string>

    <string name="freepik">Icons made by FreePik from Flaticon</string>
...
