...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/rating_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:visibility="@{viewModel.sendRating == true ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/send_rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

...
                    app:endIconMode="custom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/route_comment_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_route_comment_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/primaryLightColor"
                        android:fontFamily="@font/noto_sans"
...
