...
                android:letterSpacing="0.15"
                android:text="@={viewModel.searchId}" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_friend"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:friendly="@{viewModel.friendListed}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/recycler_add_list"
            app:layout_constraintTop_toBottomOf="@+id/edit_friend_id" />
...
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/primaryColor"
            android:orientation="horizontal"
            app:friendly="@{viewModel.addList}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/friend_selected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/friend_selected"
            android:layout_width="0dp"
...
