<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/footprints"
        android:title="@string/home_title"/>
    <item
        android:id="@+id/ranking"
        android:icon="@drawable/map_ranking_24px"
        android:title="@string/ranking_title"/>
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/map_fav_24"
        android:title="@string/favorite_title"/>
    <item
        android:id="@+id/event"
        android:icon="@drawable/map_event_24px"
        android:title="@string/event_title"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/map_user"
        android:title="@string/profile_title"/>
</menu>